[package]
name = "mcping"
version = "1.0.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12", features = ["json", "trust-dns", "rustls-tls-webpki-roots"], default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["tracing", "fs", "set-header"] }
axum = { version = "0.7", features = ["tokio", "http1", "http2", "query"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
futures-util = { version = "0.3", default-features = false }
tower-sombrero = { version = "0.0.4", features = ["axum"] }
askama = { version = "0.12", features = ["with-axum"] }
bustdir = { version = "0.1", features = ["askama"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
pyng = { path = "pyng" }
askama_escape = "0.10"
askama_axum = "0.4"
valk-utils = "0.1"
axum-extra = "0.9"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
base64 = "0.22"
arc-swap = "1"
tower = "0.4"
vss = "0.1"

[workspace]
members = [
    "pyng"
]

[package.metadata.cargo-machete]
ignored = ["askama_axum"]


