[package]
name = "libmcping"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Scetch <me@scet.ch>", "Cldfire <cldfire3@gmail.com>", "valkyrie_pilot <valk@randomairborne.dev>"]
description = "Minecraft ping protocol implementations for both the Java and Bedrock editions"
keywords = ["minecraft", "ping", "async", "bedrock", "status"]
categories = ["api-bindings", "game-development", "network-programming"]
repository = "https://github.com/Scetch/mcping"
edition = "2021"
readme = "README.md"

[features]
tokio-runtime = ["tokio", "async-trait"]

[dependencies]
async-trait = { version = "0.1", optional = true }
byteorder = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["net", "io-util"], optional = true }
trust-dns-resolver = "0.22"

[dev-dependencies]
argh = "0.1"
mc-legacy-formatting = "0.3"
viuer = "0.4"
base64 = "0.13"
image = "0.23"
tokio = { version = "1.20.4", features = ["rt", "rt-multi-thread", "macros"] }
