[package]
name = "pyng"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Scetch <me@scet.ch>", "Cldfire <cldfire3@gmail.com>", "valkyrie_pilot <valk@randomairborne.dev>"]
description = "Minecraft ping protocol implementations for both the Java and Bedrock editions"
keywords = ["minecraft", "ping", "async", "bedrock", "status"]
categories = ["api-bindings", "game-development", "network-programming"]
repository = "https://github.com/Scetch/mcping"
edition = "2024"
readme = "README.md"

[dependencies]
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util"] }
hickory-resolver = "0.25"
tracing = "0.1"

[dev-dependencies]
argh = "0.1"
mc-legacy-formatting = "0.3"
viuer = "0.11"
base64 = "0.22"
image = "0.25"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
